--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.13.3",
     "mysql": "^2.10.2",
     "sequelize": "^3.19.2",
+    "textangular": "^1.5.0",
     "underscore": "^1.8.3"
   }
 }
